<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout

    android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:orientation="vertical"
android:verticalScrollbarPosition="defaultPosition"
android:background="@color/white">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/photo"
    android:layout_marginTop="10dp"
    />


<ImageView
    android:id="@+id/real_photo"
    android:layout_width="170dp"
    android:layout_height="170dp"
    android:layout_marginLeft="80dp"
    android:layout_marginTop="20dp"
    />

    <Button
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="280dp"
        android:layout_marginBottom="-90dp"
        android:layout_marginTop="-120dp"
        android:layout_weight="1"
        android:onClick="changeButton"
        android:text="Change" />

    <TextView
        android:id="@+id/name_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_view"
    android:layout_marginTop="175dp"
    />
<EditText
    android:id="@+id/nameText"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:hint="@string/name_box"
    android:layout_marginTop="15dp"
    android:inputType="textPersonName"
    />



<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/e_mail_view"

    />
<EditText
    android:id="@+id/EmailText"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_marginTop="2dp"
    android:hint="@string/email_box"
    android:inputType="textEmailAddress"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/number_view"
    />
<EditText
    android:id="@+id/phone"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_marginTop="2dp"
    android:hint="@string/number"
    android:inputType="number"/>




<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/gender_view"
    />


<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:id="@+id/gender_group_button">

    <RadioButton
        android:id="@+id/male_radio"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="Female"
        android:onClick="genderClick"/>

    <RadioButton
        android:id="@+id/female_radio"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="-46dp"
        android:text="Male"
        android:onClick="genderClick"/>

</RadioGroup>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Class_View"
    />

    <EditText
        android:id="@+id/edit_class"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="2dp"
        android:hint="@string/Class_edit"
        android:inputType="number" />


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Major_heading"
    />

<EditText
    android:id="@+id/major_class"
    android:layout_width="match_parent"
    android:layout_height="57dp"
    android:layout_marginTop="2dp"
    android:hint="@string/Major_box"
    android:inputType="textPersonName"
    />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginTop="-1dp"
        android:layout_weight="1"
        android:onClick="saveButton"
        android:text="SAVE" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginTop="-1dp"
        android:layout_weight="1"
        android:onClick="cancelButton"
        android:text="cancel" />
</LinearLayout>
</ScrollView>
